--- a/src/pages/ipodetails/index.less
+++ b/src/pages/ipodetails/index.less
@@ -7,6 +7,7 @@
         margin: 16px 0;
         display: flex;
         align-items: center;
+        justify-content: space-between;
 
         > button {
             border: 1px solid #eee;
@@ -14,6 +15,30 @@
             margin-right: 20px;
             background-color: #fff;
             border-radius: 5px;
+        }
+        
+        .comp-name {
+            font-weight: 500;
+        }
+
+        .logo {
+            width: 150px;
+            margin-left: 5px;
+        }
+
+
+        .btn {
+            > button {
+                background-color: #666;
+                border: none;
+            }
+            &-container {
+                display: flex;
+            }
+            
+            &-apply {
+                margin-left: 10px;
+            }
         }
     }
 
